--- a/vp1/index.html
+++ b/vp1/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Главная страница
-    </title>
-    <link rel="stylesheet" href="css/vendors.min.css">
-    <link rel="stylesheet" href="css/main.min.css">
+    <title>Главная страница</title>
+    <link rel="stylesheet" href="css/vendors.min.css"><link rel="stylesheet" href="css/main.min.css">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </head>
   <body>
     <div class="wrapper"><div class="maincontent">
@@ -403,6 +401,7 @@
                   </div>
                 </div>
               </div>
+              <div class="g-recaptcha" data-sitekey="6Lf-dTMUAAAAAO-4l0PylWBW74IaVaWi_F0Sldf_"></div>
             </form>
           </div>
         </div>
